--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
@@ -6,20 +6,19 @@ metadata:
 uid: certification.d365-functional-consultant-supply-chain-management
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Dynamics 365 Supply Chain Management Functional Consultants rationalisieren die Kostenrechnung, Bestandsführung, Masterplanung und Lagerverwaltung für ihre Kunden.
 subTitle: 'Dynamics 365 Supply Chain Management Functional Consultants rationalisieren die Kostenrechnung, Bestandsführung, Masterplanung und Lagerverwaltung für ihre Kunden.'
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
 - Durchführen der Datenmigration
 - Überprüfung und Support der Lösung
 - Implementieren des Produktinformationsmanagements
-- Implementieren des Bestandsmanagements
+- Implementieren der Bestandsführung
 - Implementieren und Verwalten von Lieferkettenprozessen
 - Implementieren von Lagerverwaltung und Transportmanagement und Durchführung von Geschäftsprozessen
 roles:
