--- a/learn-certs-pr/devops-engineer.yml
+++ b/learn-certs-pr/devops-engineer.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: DevOps Engineer Expert'
 metadata:
   title: 'Microsoft Certified: DevOps Engineer Expert'
-  description: Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.
+  description: 'Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.'
 uid: certification.devops-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
