--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -7,9 +7,9 @@ uid: exam.mb-200
 displayName: MB-200
 summary: |-
   <div>
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
   <div><strong> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
-  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Für weitere Informationen, <a href="https://aka.ms/microsoftlearncommunity">besuchen Sie unseren Blog</a> und lesen Sie unsere Beiträge zu Prüfungseinstellungen. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
+  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Eine neue prüfung, <a href="/learn/certifications/exams/pl-200">PL-200</a>, wird im September 2020 verfügbar sein.. Für weitere Informationen, <a href="https://aka.ms/microsoftlearncommunity">besuchen Sie unseren Blog</a> und lesen Sie unsere Beiträge zu Prüfungseinstellungen. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
@@ -81,7 +81,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
