--- a/learn-certs-pr/exams/mb-400.yml
+++ b/learn-certs-pr/exams/mb-400.yml
@@ -7,16 +7,16 @@ uid: exam.mb-400
 displayName: MB-400
 summary: |-
   <div>
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Für weitere Informationen, <a href="https://aka.ms/microsoftlearncommunity">besuchen Sie unseren Blog</a> und lesen Sie unsere Beiträge zu Prüfungseinstellungen. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Eine neue Prüfung, <a href="/learn/certifications/exams/pl-400">PL-400</a>, wird im September 2020 verfügbar sein. Für weitere Informationen, <a href="https://aka.ms/microsoftlearncommunity">besuchen Sie unseren Blog</a> und lesen Sie unsere Beiträge zu Prüfungseinstellungen. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für diese Prüfung sind Entwickler, die mit Microsoft Power Apps modellbasierten Anwendungen in Dynamics 365 arbeiten, um Dynamics 365-Implementierungen zu entwerfen, zu entwickeln, zu sichern und zu erweitern. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
+  Kandidaten für dieses examens sind Entwickler, die mit Microsoft Power Apps modellbasierten Anwendungen in Dynamics 365 arbeiten, um Dynamics 365-Implementierenen zu entwerfen, zu entwickeln, zu sichern und zu erweitern. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
 
   Die Kandidaten müssen über fundierte Kenntnisse in Power Apps modellbasierten Anwendungen in Dynamics 365 verfügen, einschließlich genauer Kenntnisse der Anpassung, Konfiguration, Integration und Erweiterbarkeit sowie der Grenzen und Einschränkungen. Die Kandidaten sollen über ein grundlegendes Verständnis der DevOps-Methoden für Power Apps modellbasierte Anwendungen in Dynamics 365 verfügen. Die Kandidaten müssen Daten bereitstellen, speichern und dokumentieren.
 
   Die Kandidaten sollten über Entwicklungserfahrung verfügen, die JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, RESTful Web Services, ASP.NET und Power BI umfasst.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erstellen eines technischen Designs, Konfigurieren eines Common Data Service (CDS), Erstellen und Konfigurieren von Power Apps, Konfigurieren der Geschäftsprozessautomatisierung, Erweitern der Benutzererfahrung, Erweitern der Plattform und Entwickeln von Integrationen.'
+subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erstellen eines technischen Designs, Konfigurieren eines Common Data Service (CDS), Erstellen und Konfigurieren von Power Apps, Konfigurieren der Geschäftsprozessautomatisierung, Erweitern der Benutzererfahrung, Erweitern der Plattform und Entwickeln von Integrationen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42uM0
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-400&examname=Exam%20MB-400:%20Microsoft%20Power Apps%20+%20Dynamics%20365%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-400
@@ -71,7 +71,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
