--- a/learn-certs-pr/exams/mo-100.yml
+++ b/learn-certs-pr/exams/mo-100.yml
@@ -6,10 +6,10 @@ metadata:
 uid: exam.mo-100
 displayName: MO-100
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Diese Prüfung umfasst die Möglichkeit, professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz zu erstellen und zu verwalten. Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von Word demonstrieren und Aufgaben unabhängig ausführen können.
-subTitle: Diese Prüfung misst die Kompetenz in der korrekten Anwendung der Hauptfunktionen von Word durch die Erstellung und Bearbeitung von Dokumenten für eine Vielzahl von Zwecken und Situationen. Die Prüfung umfasst die Fähigkeit, professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz zu erstellen und zu pflegen.
+subTitle: dieses examens misst die Kompetenz in der korrekten Anwendung der Hauptfunktionen von Word durch die Erstellung und Bearbeitung von Dokumenten für eine Vielzahl von Zwecken und Situationen. Die Prüfung umfasst die Fähigkeit, professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz zu erstellen und zu pflegen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WPxx
 providers:
@@ -40,7 +40,7 @@ skills:
 - Verwalten von Tabellen und Listen (15-20%)
 - Referenzen erstellen und verwalten (5-10%)
 - Grafikelemente einfügen und formatieren (15-20%)
-- Verwaltung der Dokumentenzusammenarbeit (5-10%)
+- Verwalten der Dokumentenzusammenarbeit (5-10%)
 roles:
 - developer
 products:
@@ -57,7 +57,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
