--- a/learn-certs-pr/exams/ms-300.yml
+++ b/learn-certs-pr/exams/ms-300.yml
@@ -7,8 +7,8 @@ uid: exam.ms-300
 displayName: MS-300
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>DIESE EXAMENS WIRD AM 31. AUGUST 2020 EINGESTELLT. Hinweis Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt.<br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><strong>Dieses Examen wird am 31. August 2020 eingestellt. Informationen zu derzeit verfügbaren Optionen finden Sie auf der <a href="/learn/certifications/browse/">Seite Zertifizierungen und Prüfungen durchsuchen</a>.</strong><br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind Teamwork Administratoren, die verantwortlich sind für die Konfiguration, Bereitstellung und Verwaltung von Office 365 und Azure Workloads, die den Schwerpunkt legen auf Effizienz und effiziente Zusammenarbeit und Übernahme. Teamwork Administratoren verwalten Apps, Dienste und die unterstützende Infrastruktur, um die Anforderungen des jeweiligen Business zu erfüllen. Der Teamwork Administrator sollte in der Lage sein, SharePoint (online, vor Ort und hybrid), OneDrive und Teams bereitzustellen, zu verwalten, zu übertragen und zu sichern.
@@ -20,7 +20,6 @@ summary: |-
 subTitle: 'dieses examens misst Ihre Kompetenz, folgende technische Aufgaben zu erfüllen: SharePoint Online konfigurieren und verwalten; OneDrive for Business konfigurieren und verwalten; Teams konfigurieren und verwalten; Workload-Integrationen konfigurieren und verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEI2
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-300&examname=Exam%20MS-300:%20Deploying%20Microsoft%20365%20Teamwork&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-300
 locales:
 - en
 - ja
@@ -31,6 +30,7 @@ skills:
 - Konfigurieren und Verwalten von OneDrive for Business (25-30%)
 - Konfigurieren und Verwalten von Teams (20-25%)
 - Konfiguration und Management von Workload Integration (15-20%)
+retirementDate: 08/31/2020
 roles:
 - administrator
 products:
