--- a/learn-certs-pr/power-platform-developer-associate.yml
+++ b/learn-certs-pr/power-platform-developer-associate.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Power Platform Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Developer Associate'
-  description: Diese Zertifizierung wird im Oktober 2020 verfügbar sein. Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
+  description: Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein. Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
 uid: certification.power-platform-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -10,12 +10,12 @@ summary: |-
 
   Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen. Sie implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
 
-  Die Kandidaten müssen über fundierte Kenntnisse der Power Platform-Services verfügen. Die Kandidaten haben ein tiefgreifendes Verständnis ihrer Fähigkeiten, Grenzen und Einschränkungen. Sie sollten ein grundlegendes Verständnis der DevOps-Praktiken für Power-Platform haben.
+  Die Kandidaten müssen über fundierte Kenntnisse der Power Platform-Services verfügen. Die Kandidaten haben ein tiefgreifendes Verständnis ihrer Fähigkeiten, Grenzen und Einschränkungen. Die Kandidaten sollten ein grundlegendes Verständnis der DevOps-Praktiken für Power-Platform haben.
 
   Ihre Entwicklungserfahrung für diese Rolle sollte Power Platform-Dienste, JavaScript, JSON, TypeScript, C#, HTML, .NET, Microsoft Azure, Microsoft 365, RESTful-Webdienste, ASP.NET und Power BI umfassen.
 
-  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird im Oktober 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird im Oktober 2020 verfügbar sein. Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
+  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein.</strong></div>
+subTitle: Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein. Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
 levels:
 - intermediate
 skills:
@@ -37,19 +37,22 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Bhz
 exams:
 - uid: exam.pl-400
 resources:
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjH
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: help.md
 
