--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,16 +2,16 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Diese Zertifizierung wird im September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  description: Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong><br/><br/></font></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></font></div>
 
   Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen. Sie sollten Erfahrung mit Power-Platform-Maker-Tools haben, um Lösungen zu erstellen, die Power-Platform und Microsoft 365 verwenden. Zertifizierte Funktionsberater sollten über Kenntnisse in Datenmodellierung, User Experience Design, Anforderungsanalyse und Prozessanalyse verfügen.
 
-  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird im September 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird im September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein.</strong></div>
+subTitle: Diese Zertifizierung wird am oder um den 25. September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
 levels:
 - intermediate
 skills:
