--- a/learn-certs-pr/roles/developer.yml
+++ b/learn-certs-pr/roles/developer.yml
@@ -1,15 +1,15 @@
 ### YamlMime:Role 
-title: Entwickler 
+title: Developer 
 metadata: 
-  title: Entwickler 
-  description: Entwickler entwerfen, erstellen, testen und warten Lösungen. Entwickler implementieren Anwendungen und Services in Zusammenarbeit mit Lösungsarchitekten und Kunden.
+  title: Developer 
+  description: Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Services in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden.
 uid: role.developer 
 summary: | 
-  Entwickler entwerfen, erstellen, testen und warten Lösungen. Entwickler implementieren Anwendungen und Services in Zusammenarbeit mit Lösungsarchitekten und Kunden.  
-subTitle: Entwickler entwerfen, erstellen, testen und warten Cloud-Lösungen.
+  Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Services in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden. 
+subTitle: Developers (Entwickler) entwerfen, erstellen, testen und warten Cloud-Lösungen.
 certificationPaths: 
-- title: Azure-Entwickler
-  linkedInKeywords: Azure-Entwickler
+- title: Azure Developer
+  linkedInKeywords: Azure Developer
   uid: certification-path.developer 
   prerequisites: 
   - uid: certification.azure-fundamentals
@@ -19,8 +19,8 @@ certificationPaths:
   - uid: certification.azure-developer
     levels:
     - intermediate 
-- title: Dynamics 365 Entwickler von Finance and Operations Apps
-  linkedInKeywords: Dynamics 365 Entwickler von Finance and Operations Apps
+- title: Dynamics 365 Finance and Operations Apps Developer
+  linkedInKeywords: Dynamics 365 Finance and Operations Apps Developer
   uid: certification.d365-finance-and-operations-apps-developer-associate
   prerequisites: 
   - uid: certification.d365-fundamentals
@@ -30,8 +30,8 @@ certificationPaths:
   - uid: certification.d365-finance-and-operations-apps-developer-associate
     levels:
     - intermediate 
-- title: Microsoft 365 Entwickler
-  linkedInKeywords: Microsoft 365 Entwickler
+- title: Microsoft 365 Developer
+  linkedInKeywords: Microsoft 365 Developer
   uid: certification.m365-developer-associate
   prerequisites: 
   - uid: certification.microsoft-365-fundamentals
@@ -41,8 +41,8 @@ certificationPaths:
   - uid: certification.m365-developer-associate
     levels:
     - intermediate 
-- title: Power Apps + Dynamics 365 Entwickler
-  linkedInKeywords: Power Apps + Dynamics 365 Entwickler
+- title: Power Apps + Dynamics 365 Developer
+  linkedInKeywords: Power Apps + Dynamics 365 Developer
   uid: certification.power-apps-and-d365-developer-associate
   prerequisites: 
   - uid: certification.power-platform-fundamentals
@@ -55,7 +55,7 @@ certificationPaths:
 certifications:
 - uid: certification.azure-developer
   requiredExams:
-  - uid: exam.az-203
+  - uid: exam.az-204
 - uid: certification.d365-finance-and-operations-apps-developer-associate
   requiredExams:
   - uid: exam.mb-300
@@ -65,14 +65,20 @@ certifications:
   - uid: exam.ms-600
 - uid: certification.power-apps-and-d365-developer-associate
   requiredExams:
-  - uid: exam.pl-900
+  - uid: exam.mb-400
+- uid: certification.power-platform-developer-associate
+  requiredExams:
+  - uid: exam.pl-400
+- uid: certification.azure-iot-developer-specialty
+  requiredExams:
+  - uid: exam.az-220
 resources:
 - title: Microsoft Leitfaden für Schulungen und Zertifizierungen
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Poster für Schulungen und Zertifizierungen
   description: Wählen Sie mit diesem Poster für Schulungen und Zertifizierungen Ihren Weg zum Erfolg.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Unterstützung von Zertifizierungen
   href: ../help.md
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
