--- a/learn-certs-pr/courses/az-104t00.yml
+++ b/learn-certs-pr/courses/az-104t00.yml
@@ -3,7 +3,6 @@ title: Microsoft Azure Administrator
 metadata:
   title: 'Course AZ-104T00-A: Microsoft Azure Administrator'
   description: 'Course AZ-104T00-A: Microsoft Azure Administrator'
-  iltScheduling: true
 uid: course.az-104t00
 courseNumber: 'AZ-104T00-A'
 hoursToComplete: 96
@@ -30,11 +29,13 @@ summary: |-
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an Azure-Administratoren. Der Azure-Administrator implementiert, verwaltet und überwacht Identitäts-, Governance-, Speicher-, Rechen- und virtuelle Netzwerke in einer Cloud-Umgebung. Der Azure-Administrator stellt Ressourcen entsprechend bereit, überwacht sie und passt sie an.
 prerequisitesSection: |-
-  Erfolgreiche Azure-Administratoren beginnen diese Rolle mit Erfahrung in den Bereichen Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerk.
-  - Verständnis der lokalen Virtualisierungstechnologien, einschließlich&#58; VMs, virtuelle Netzwerke und virtuelle Festplatten.
-  - Grundlegendes zur Netzwerkkonfiguration, einschließlich TCP / IP, DNS (Domain Name System), VPNs (Virtual Private Networks), Firewalls und Verschlüsselungstechnologien.
-  - Grundlegendes zu Active Directory-Konzepten, einschließlich Domains, Gesamtstrukturen, Domain-Controllern, Replikation, Kerberos-Protokoll und LDAP (Lightweight Directory Access Protocol).
-  - Grundlegendes zu Ausfallsicherheit und Notfallwiederherstellung, einschließlich Sicherungs- und Wiederherstellungsvorgängen.
+  Erfolgreiche Azure-Administratoren beginnen diese Rolle mit Erfahrung in den Bereichen Virtualisierung, Netzwerk, Identität und Speicher.
+  - Verständnis lokaler Virtualisierungstechnologien&#58; VMs, virtueller Netzwerke und virtueller Festplatten.
+  - Verständnis von Netzwerkkonfiguration, inklusive TCP/IP, Domain Name System (DNS), virtuellen privaten Netzwerken (VPNs), Firewall und Verschlüsselungstechnologien.
+  - Verständnis von Active Directory-Konzepten, einschließlich Benutzern, Gruppen und rollenbasierter Zugriffssteuerung.
+  - Verständnis von Resilienz und Notfallwiederherstellung, inklusive Sicherung und Wiederherstellungsvorgänge.
+
+  Sie können die Voraussetzungen und ein besseres Verständnis von Azure erlangen, indem Sie [AZ-104&#58; Voraussetzungen für Azure-Administratoren](/learn/paths/az-104-administrator-prerequisites/). Diese kostenlose Onlineschulung vermittelt Ihnen die Erfahrung, die Sie benötigen, um in diesem Kurs erfolgreich zu sein.
 outlineSection: |-
   ### Modul 1&#58; Identität
   In diesem Modul erfahren Sie, wie Sie Identitäten mit Azure Active Directory sichern und Benutzer und Gruppen implementieren.
@@ -42,28 +43,25 @@ outlineSection: |-
   - Azure Active Directory
   - Benutzer und Gruppen
 
-
   #### Lab&#58; Verwalten von Azure Active Directory-Identitäten
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Identitäten mit Azure Active Directory sichern und verwalten.
   - Benutzer und Gruppen implementieren und verwalten.
 
 
   ### Modul 2&#58; Governance und Compliance
   In diesem Modul erfahren Sie, wie Sie Ihre Abonnements und Accounts verwalten, Azure-Richtlinien umsetzen und die rollenbasierte Zugriffssteuerung verwenden.
-
   #### Lektionen
   - Abonnements und Accounts
   - Azure Policy
-  - Rollenbasierte Zugriffskontrolle (RBAC)
-
+  - Rollenbasierte Zugriffssteuerungsrollen (RBAC)
 
   #### Lab&#58; Abonnements und RBAC verwalten
 
   #### Lab&#58; Governance zu Azure-Richtlinien verwalten
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Azure-Abonnements und -Accounts implementieren und verwalten.
   - Azure-Richtlinien, einschließlich benutzerdefinierter Richtlinien implementieren.
   - RBAC einsetzen, um Berechtigungen zuzuweisen.
@@ -77,16 +75,15 @@ outlineSection: |-
   - Azure PowerShell und CLI
   - ARM-Vorlagen
 
-
   #### Lab&#58; Verwalten von Azure-Ressourcen mit Hilfe des Azure-Portals
 
   #### Lab&#58; Verwalten von Azure-Ressourcen mit Hilfe von ARM-Vorlagen
 
-  #### Übung&#58; Verwalten von Azure-Ressourcen mit Hilfe von Azure PowerShell
+  #### Lab&#58; von Azure-Ressourcen mit Hilfe von Azure PowerShell
 
-  #### Lab&#58; Verwalten von Azure-Ressourcen mit Hilfe von Azure CLI
+  #### Lab&#58; von Azure-Ressourcen mit Hilfe von Azure CLI
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Azure Resource Manager verwenden, um Ressourcen zu organisieren.
   - Azure Portal und Cloud Shell verwenden.
   - Azure PowerShell und CLI verwenden.
@@ -102,15 +99,15 @@ outlineSection: |-
   - Azure-Firewall
   - Azure DNS
 
-
   #### Lab&#58; Implementieren eines virtuellen Netzwerks
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Virtuelle Netzwerke und Subnetzwerke implementieren.
   - Öffentliche und private IP-Adressierung konfigurieren.
   - Netzwerksicherheitsgruppen konfigurieren.
   - Azure-Firewall konfigurieren.
   - Private und öffentliche DNS-Zonen konfigurieren.
+
 
   ### Modul 5&#58; Standortübergreifende Konnektivität
   In diesem Modul erfahren Sie mehr über standortübergreifende Konnektivitätsfunktionen wie VNet Peering, virtuelle Netzwerk-Gateways und Site-to-Site-Verbindungen.
@@ -119,35 +116,31 @@ outlineSection: |-
   - VPN-Gateway-Verbindungen
   - ExpressRoute und virtuelles WAN
 
-
   #### Lab&#58; Umsetzen einer standortübergreifenden Konnektivität
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - VNet Peering konfigurieren.
   - VPN-Gateways konfigurieren.
   - Wählen Sie die geeignete standortübergreifende Konnektivitätslösung.
 
-  ### Modul 6&#58; Management des Netzwerkverkehrs
-  In diesem Modul erfahren Sie mehr über Strategien zum Netzwerkverkehr, einschließlich Netzwerkrouting und Service-Endpunkte, Azure Load Balancer, Azure Application Gateway und Traffic Manager.
 
+  ### Modul 6&#58; Management des Netzwerkverkehrs
+  In diesem Modul erfahren Sie mehr über Strategien zum Netzwerkverkehr, einschließlich Netzwerkrouting und Service-Endpunkte, Azure Load Balancer, Azure Application Gateway.
   #### Lektionen
   - Netzwerk-Routing und Endpunkte
   - Azure Load Balancer
   - Azure Application Gateway
-  - Traffic Manager
-
 
   #### Lab&#58; Traffic-Management implementieren
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Das Netzwerk-Routing einschließlich benutzerdefinierter Routen und Service-Endpunkte konfigurieren.
   - Einen Azure Load Balancer konfigurieren.
   - Ein Azure Anwendungs-Gateway konfigurieren.
-  - Die entsprechende Netzwerkverkehrslösung wählen.
+
 
   ### Modul 7&#58; Azure-Speicher
   In diesem Modul erhalten Sie Informationen zu grundlegenden Speicherfunktionen, einschließlich Speicherkonten, Blob-Speicher, Azure-Dateien und Speichersicherheit.
-
   #### Lektionen
   - Speicher-Accounts
   - Blob-Speicherung
@@ -155,43 +148,40 @@ outlineSection: |-
   - Azure-Dateien und Dateisynchronisierung
   - Verwalten des Speichers
 
-
   #### Lab&#58; Verwalten des Azure-Speichers
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Azure-Speicher-Accounts erstellen.
   - Einen Blob-Container konfigurieren.
   - Azure-Speicher sichern.
   - Azure-Dateifreigaben und Dateisynchronisierung konfigurieren.
   - Speicher mit Tools wie Storage Explorer verwalten.
 
+
   ### Modul 8&#58; Virtuelle Azure-Maschinen
   In diesem Modul erhalten Sie Informationen zu virtuellen Azure-Maschinen, einschließlich Planung, Erstellung, Verfügbarkeit und Erweiterungen.
-
   #### Lektionen
   - Planung virtueller Maschinen
   - Erstellen virtueller Maschinen
   - Verfügbarkeit der virtuellen Maschine
   - Erweiterungen für virtuelle Maschinen
 
+  #### Lab&#58; Virtuelle Maschinen verwalten
 
-  #### Lab &#58; Virtuelle Maschinen verwalten
-
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Implementierung virtueller Maschinen planen.
   - Virtuelle Maschinen erstellen.
   - Die Verfügbarkeit der virtuellen Maschine, einschließlich der Skalierungssätze konfigurieren.
   - Erweiterungen für virtuelle Maschinen verwenden.
 
-  ### Modul 9&#58; Serverlose EDV
-  In diesem Modul lernen Sie, wie Sie Funktionen für serverlose EDV wie Azure App Service, Azure Container Instances und Kubernetes verwalten.
 
+  ### Modul 9&#58; Serverlose Computing 
+  In diesem Modul lernen Sie, wie Sie Funktionen für serverlose EDV wie Azure App Service, Azure Container Instances und Kubernetes verwalten.
   #### Lektionen
   - Azure App-Service-Pläne
   - Azure-App-Service
   - Container-Services
   - Azure Kubernetes Service
-
 
   #### Lab&#58; Web Apps implementieren
 
@@ -199,11 +189,12 @@ outlineSection: |-
 
   #### Lab&#58; Azure Kubernetes-Service implementieren
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Einen App-Serviceplan erstellen.
   - Eine Web-App erstellen.
   - Azure Container-Instanzen implementieren.
   - Azure Kubernetes-Service implementieren.
+
 
   ### Modul 10&#58; Datenschutz
   In diesem Modul erhalten Sie Informationen zu Datenreplikationsstrategien, zum Sichern von Dateien und Ordnern sowie zu Sicherungen virtueller Maschinen.
@@ -211,26 +202,24 @@ outlineSection: |-
   - Datei- und Ordnersicherungen
   - Sicherungen virtueller Maschinen
 
-
   #### Lab&#58; Datenschutz implementieren
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Sichern und Wiederherstellen von Dateien und Ordnern.
   - Sichern und Wiederherstellen von virtuellen Maschinen.
 
+
   ### Modul 11&#58; Überwachung
   In diesem Modul erfahren Sie, wie Sie Ihre Azure-Infrastruktur überwachen, einschließlich Azure Monitor, Warnungen und Log-Analysen.
-
   #### Lektionen
   - Azure-Monitor
   - Azure-Warnungen
   - Log-Analysen
   - Netzwerkbeobachter
 
-
   #### Lab&#58; Überwachung implementieren
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Azure-Monitor verwenden.
   - Azure-Warnungen erstellen.
   - Anfrage unter Verwendung von Log-Analysen.
