--- a/learn-certs-pr/d365-functional-consultant-manufacturing.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing.yml
@@ -6,7 +6,7 @@ metadata:
 uid: certification.d365-functional-consultant-manufacturing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz, die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kunden.
 subTitle: 'Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz, die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kunden.'
