--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -7,8 +7,8 @@ uid: exam.az-300
 displayName: AZ-300
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>EINE NEUE VERSION DIESES EXAMENS, <a href="/learn/certifications/exams/az-303">AZ-303</a>, WURDE AM 29 JUNI 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den 30. September 2020 eingestellt wird. Hinweis&#58; Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt.<br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><strong>EINE NEUE VERSION DIESES EXAMENS, <a href="/learn/certifications/exams/az-303"> AZ-303</a>, WURDE AM 29 JUNI 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den 30. September 2020 eingestellt wird. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.
@@ -19,8 +19,13 @@ summary: |-
 
   Ein Kandidat für dieses examens sollte über umfassende Erfahrung und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenmanagement, Budgetierung und Governance. Jemand in dieser Position sollte Entscheidungen in den einzelnen Bereichen steuern, die eine Gesamtlösung beeinflussen. Darüber hinaus sollte jemand in dieser Position mindestens eine dieser Azure-Knowledge-Domains beherrschen&#58; Verwaltung, Entwicklung oder DevOps.
 
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; Wenn Sie dieses Examen bestehen, erhalten Sie die folgende Zertifizierung&#58; <a href="/learn/certifications/azure-solutions-architect">Microsoft Certified&#58; Azure Solutions Architect Expert</a>.</div>
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Bereitstellen und Konfigurieren der Infrastruktur, Implementieren von Workloads und Sicherheit, Erstellen und Bereitstellen von Anwendungen, Implementieren von Authentifizierungen und sicheren Daten, und Entwickeln für die Cloud- und Azure-Speicher.'
+  <div><strong><br/>HINWEIS&#58; Sie erhalten die <a href="/learn/certifications/azure-solutions-architect">Microsoft Certified&#58; Azure Solutions Architect Expert</a> Zertifizierung, wenn Sie eine der folgenden Prüfungskombinationen bestehen&#58; <ul>
+  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> und <a href="/learn/certifications/exams/az-301">AZ-301</a></li>
+  <li><a href="/learn/certifications/exams/az-303">AZ-303</a> und <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
+  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> und <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
+  <li><a href="/learn/certifications/exams/az-301">AZ-301</a> und <a href="/learn/certifications/exams/az-303">AZ-303</a></li>
+  </ul></strong></div>
+subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Bereitstellen und Konfigurieren der Infrastruktur, Implementieren von Workloads und Sicherheit, Erstellen und Bereitstellen von Anwendungen, Implementieren von Authentifizierungen und sicheren Daten, und Entwickeln für die Cloud- und Azure-Speicher.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwB
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -33,12 +38,12 @@ locales:
 levels:
 - advanced
 skills:
-- EINE NEUE VERSION DIESES EXAMENS, AZ -303, WURDE AM 29 JUNI 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den 30. September 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
+- EINE NEUE VERSION DIESES EXAMENS, AZ-303, WURDE AM 29 JUNI 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den 30. September 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
 - Bereitstellen und Konfigurieren der Infrastruktur (40-45%)
 - Implementieren von Workloads und Sicherheit (25-30%)
 - Erstellen und Bereitstellen von Apps (5-10%)
 - Authentifizierung und Datensicherheit implementieren (5-10%)
-- Entwickleln für die Cloud und für Azure-Speicher (15-20%)
+- Entwickeln für die Cloud und für Azur-Speichermedien (15-20%)
 retirementDate: 09/30/2020
 roles:
 - solution-architect
