--- a/learn-certs-pr/exams/da-100.yml
+++ b/learn-certs-pr/exams/da-100.yml
@@ -6,7 +6,9 @@ metadata:
 uid: exam.da-100
 displayName: DA-100
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Learn more</a>.</strong></font><br/><br/></div><div><strong>Der Inhalt dieser Prüfung wird am 24. September 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  </div>
 
   Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren. Als Fachexperte sind Datenanalysten dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten. Datenanalysten arbeiten auch mit wichtigen Stakeholdern in verschiedenen Branchen zusammen, um relevante Erkenntnisse basierend auf den identifizierten Geschäftsanforderungen zu liefern.
   <br/>
@@ -19,7 +21,7 @@ providers:
 - providerType: pearson-vue
   examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DA-100&examname=Exam%20DA-100:%20Analyzing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fda-100
 - providerType: gsi
-  examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DA-100&provider=psi&examname=Exam%20DA-100:%20Analyzing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fda-100
+  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
 - en
 - zh-cn
@@ -28,6 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
+- Der Inhalt dieser Prüfung wird am 24. September 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Bereiten Sie die Daten vor (20-25%)
 - Modellieren Sie die Daten (25-30%)
 - Visualisieren Sie die Daten (20-25%)
