--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -7,18 +7,19 @@ uid: exam.mb-220
 displayName: MB-220
 summary: |-
   <div>
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
   <div><strong>Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für diese Prüfung sind Dynamics 365 Customer Engagement Funktionsberater mit Marketingexpertise. Die Kandidaten sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketinginformationen liefern.
+  Kandidaten für dieses examens sind Dynamics 365 Customer Engagement Funktionsberater mit Marketingexpertise. Die Kandidaten sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketinginformationen liefern.
 
-  Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung um E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Voice of the Customer, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung(GDPR).
+  Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung um E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Voice of the Customer, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung (GDPR).
 
   Die Bewerber sollten über einige Kenntnisse der Marketingprinzipien und der Rolle der Marketinganwendung in Bezug auf die Dynamics 365 Anwendungssuite verfügen, einschließlich der Integration mit Dynamics 365 und Office 365 Anwendungen. Die Kandidaten sollten die Terminologie der Branche, Prioritäten, gemeinsame Initiativen, Standards, Methoden und bewährte Verfahren verstehen.
-subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen, Verwalten von Segmenten und Listen, Erstellen und Verwalten von Marketingformen und -seiten, Verwalten von Leads, Erstellen und Verwalten von Marketing-E-Mails, Customer-Journey-Management, Verwalten von Veranstaltungen und Webinaren sowie Konfigurieren und Analysieren von Kundenantworten.'
+subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen, Verwalten von Segmenten und Listen, Erstellen und Verwalten von Marketingformen und -seiten, Verwalten von Leads, Erstellen und Verwalten von Marketing-E-Mails, Customer-Journey-Management, Verwalten von Veranstaltungen und Webinaren sowie Konfigurieren und Analysieren von Kundenantworten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ
+practiceTestUrl: https://in.mindhub.com/mb-220-microsoft-dynamics-365-marketing-microsoft-official-practice-test/p/MU-MB-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-220&examname=Exam%20MB-220:%20Microsoft%20Dynamics%20365%20for%20Marketing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-220
 locales:
 - en
@@ -71,7 +72,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
