--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -7,16 +7,16 @@ uid: exam.mb-240
 displayName: MB-240
 summary: |-
   <div>
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
   <div><strong>Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für diese Prüfung sind Microsoft Dynamics 365 Customer Engagement Funktionsberater mit Field Service Expertise. Die Kandidaten sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes abschließen.
+  Kandidaten für dieses examens sind Microsoft Dynamics 365 Customer Engagement Funktionsberater mit Field Service Expertise. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes abschließen.
 
-  Die Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Field Service-Anwendung, die Bereitstellung der Connected Field Service (IoT)-Lösung und der mobilen Anwendung sowie die Implementierung zusätzlicher notwendiger Anpassungen. Die Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
+  Die Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Field Service-Anwendung, die Bereitstellung der Connected Field Service (IoT)-Lösung und der mobilen Anwendung sowie die Implementieren zusätzlicher notwendiger Anpassungen. Die Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
 
   Die Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten der Außendienstanwendung verfügen, einschließlich der Konfiguration von Diensten, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der Lösung Connected Field Service (IoT) und der Konfiguration der Field Service Mobile App.
-subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Außendienstanwendungen, Verwalten von Arbeitsaufträgen, Planen und Versenden von Arbeitsaufträgen, Verwalten der Mobilität im Außendienst, Verwalten von Bestand und Einkauf sowie Verwalten von Anlagen und Vereinbarungen.'
+subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Außendienstanwendungen, Verwalten von Arbeitsaufträgen, Planen und Versenden von Arbeitsaufträgen, Verwalten der Mobilität im Außendienst, Verwalten von Bestand und Einkauf sowie Verwalten von Anlagen und Vereinbarungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
 practiceTestUrl: https://in.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -68,7 +68,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
