--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -6,17 +6,20 @@ metadata:
 uid: exam.mb-330
 displayName: MB-330
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  </div>
 
-  Kandidaten für diese Prüfung sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
+  Kandidaten für dieses examens sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementieren und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
   <br/>
 
-  Die Kandidaten für diese Prüfung verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement.
+  Die Kandidaten für dieses examens verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement.
 
-  Die Kandidaten für diese Prüfung spezialisieren sich in der Regel auf einen oder mehrere Funktionsbereiche von Microsoft Dynamics 365 Finance, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
+  Die Kandidaten für dieses examens spezialisieren sich in der Regel auf einen oder mehrere Funktionsbereiche von Microsoft Dynamics 365 Finance, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
 
   Die Kandidaten müssen über Grundkenntnisse in den Praktiken des Lieferantenmanagements verfügen, einschließlich Beschaffung, Handel, Logistik, Lagerverwaltung und Transportmanagement.
-subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Produktinformationsmanagement implementieren, Bestandsmanagement implementieren, Lieferkettenprozesse implementieren und verwalten, Lagerverwaltung und Transportmanagement implementieren und Geschäftsprozesse durchführen.'
+subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Produktinformationsmanagement implementieren, Bestandsmanagement implementieren, Lieferkettenprozesse implementieren und verwalten, Lagerverwaltung und Transportmanagement implementieren und Geschäftsprozesse durchführen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVt
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-330&examname=Exam%20MB-330:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Supply%20Chain%20Management&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-330
@@ -25,9 +28,9 @@ locales:
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
+- Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Implementieren des Produktinformationsmanagements (25-30%)
-- Implementieren des Bestandsmanagements (20-25%)
+- Implementieren der Bestandsführung (20-25%)
 - Implementieren und Verwalten von Lieferkettenprozessen (25-30%)
 - Implementieren von Lagerverwaltung und Transportmanagement und Durchführung von Geschäftsprozessen (25-30%)
 roles:
@@ -68,7 +71,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
