--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -6,10 +6,11 @@ metadata:
 uid: exam.md-101
 displayName: MD-101
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Wenn Sie die Prüfung [Exam 70-698](https://www.microsoft.com/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten. Kandidaten für dieses examens sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Updates und Apps.
-  <br/>
+  Wenn Sie die Prüfung [Exam 70-698](https://www.microsoft.com/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten.
+
+  Kandidaten für dieses examens sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Updates und Apps.
 
   Als Administratoren arbeiten die Kandidaten gewöhnlich mit dem Microsoft 365 Enterprise Administrator beim Design und der Implementieren einer Gerätestrategie zusammen, die den geschäftlichen Anforderungen einer modernen Organisation gerecht wird.
 
