--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,11 +6,14 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. September 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  </div>
 
   Kandidaten für dieses examens sind Microsoft 365 Enterprise Administratoren, die an der Bewertung, Design, Migration, Bereitstellung und Verwaltung von Microsoft 365 Diensten mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365 Mietverhältnisse für Unternehme durch, inkl. Identitäten, Sicherheit, Konformität und unterstützenden Technologien.
 
-  Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
+   Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
 subTitle: 'dieses examens misst Ihre Kompetenz, folgende technische Aufgaben zu erfüllen: Implementierung moderner Gerätedienste; Implementierung von Microsoft 365 Sicherheits- und Bedrohungsmanagement; und Management von Microsoft 365 Governance und Konformität.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHZ
@@ -22,6 +25,7 @@ locales:
 levels:
 - advanced
 skills:
+- Der Inhalt dieser Prüfung wird am 24. September 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Implementieren von modernen Geräte-Services (30-35%)
 - Implementieren Sie das Microsoft 365-Security und Threat-Management (30-35%)
 - Verwalten von Microsoft 365 Governance und Konformität (35-40%)
