--- a/learn-certs-pr/m365-teamwork-administrator.yml
+++ b/learn-certs-pr/m365-teamwork-administrator.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>DIESE ZERTIFIZIERUNG WIRD AM 31. AUGUST 2020 EINGESTELLT. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://www.microsoft.com/learning/dashboard.aspx">Zertifizierungs-Dashboard</a>angezeigt.</strong><br/><br/></div>
+  <div><strong>Diese Zertifizierung endet am 31. August 2020. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://www.microsoft.com/learning/dashboard.aspx">Zertifizierungs-Dashboard</a>angezeigt.</strong><br/><br/></div>
   </div>
 
   Microsoft 365 Teamwork Administratoren konfigurieren, übernehmen die Bereitstellung und verwalten Office 365 Workloads mit einem Fokus auf effiziente und effektive Zusammenarbeit mit z.B. SharePoint (Online, On-Premises und Hybrid), OneDrive und Teams.
